--- a/index.html
+++ b/index.html
@@ -295,4 +295,8 @@
         if (!isOpen) panel.style.display = "block";
       });
     });
+    <a href="Before_You_Sign_Detailed_Checklist.pdf" target="_blank" style="padding: 10px 20px; background-color: #005792; color: white; text-decoration: none; border-radius: 5px;">
+  📄 View Rental Agreement Checklist
+</a>
+
   </script>
