--- a/index.html
+++ b/index.html
@@ -152,17 +152,21 @@
 </section>
 <section>
 <h2 class="section-title">📋 Rental Checklist</h2>
-<button class="accordion">Click to View Rental Checklist</button>
+<button class="accordion">Click to Open Rental Checklist</button>
 <div class="panel">
+<p>Before signing any rental agreement, go through this checklist carefully:</p>
 <ul>
-<li>✅ Bond details and payment receipts</li>
-<li>✅ Duration of lease and renewal terms</li>
-<li>✅ Exit/break clause and notice period</li>
-<li>✅ Maintenance responsibilities clearly listed</li>
-<li>✅ Rules on room sharing or guests</li>
+<li>✅ Do you have a written lease agreement?</li>
+<li>✅ Is the bond amount reasonable and officially receipted?</li>
+<li>✅ Are responsibilities for repairs and maintenance clearly outlined?</li>
+<li>✅ What is the notice period to end the lease?</li>
+<li>✅ Are there any restrictions on guests, subletting, or pets?</li>
+<li>✅ Have you inspected the property in-person or through a verified video tour?</li>
+<li>✅ Do you have a copy of the condition report?</li>
+<li>✅ Have you verified the landlord's or agent's identity?</li>
+<li>✅ Are there any hidden fees or unclear clauses in the agreement?</li>
 </ul>
-<p>Always read before signing. Use this checklist to protect yourself.</p>
-<a download="" href="Before_You_Sign_Detailed_Checklist.pdf">📥 Download Full Checklist</a>
+<p><strong>Tip:</strong> Always keep copies of all communication, payments, and agreements.</p>
 </div>
 </section>
 <section style="background-image: url('https://images.unsplash.com/photo-1507537297725-24a1c029d3ca'); background-size: cover; background-position: center; padding: 60px 20px;">
@@ -253,9 +257,6 @@
 </section>
 <section>
 <h2 class="section-title">🛡️ Renting Myth Busters</h2>
-
-
-
 <button class="accordion">Click to View Common Misconceptions</button>
 <div class="panel">
 <ul style="list-style-type: none; padding-left: 0;">
