--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <li>Offer rental agreement checks before signing</li>
 <li>Discuss housing during orientation</li>
 </ul>
-<a href="https://www.uwastudentguild.com/student-assist" style="display:block; margin-top:10px; color:#005792; font-weight:bold;" target="_blank">🔗 Learn more</a></div>
+</div>
 <div class="card"><h3>2. Tenant Rights Awareness</h3>
 <p><strong>What:</strong> Orientation sessions and guides that inform students of tenant law.</p>
 <p><strong>Why:</strong> Legal literacy prevents exploitation.</p>
@@ -131,7 +131,7 @@
 <li>Host multilingual induction workshops</li>
 <li>Distribute visual guides and legal websites</li>
 </ul>
-<a href="https://www.commerce.wa.gov.au/consumer-protection/renting-home" style="display:block; margin-top:10px; color:#005792; font-weight:bold;" target="_blank">🔗 Learn more</a></div>
+</div>
 <div class="card"><h3>3. Legal &amp; Emergency Help</h3>
 <p><strong>What:</strong> Fast access to support networks like Red Cross, Ask Izzy, and Tenancy WA.</p>
 <p><strong>Why:</strong> Students need help when things go wrong—like being locked out or threatened.</p>
@@ -139,7 +139,7 @@
 <li>Include services in student portals</li>
 <li>Promote legal helplines and support maps</li>
 </ul>
-<a href="https://www.redcross.org.au" style="display:block; margin-top:10px; color:#005792; font-weight:bold;" target="_blank">🔗 Learn more</a></div>
+</div>
 <div class="card"><h3>4. Peer Mentorship and Forums</h3>
 <p><strong>What:</strong> Peer-to-peer housing guidance and student-run Facebook groups.</p>
 <p><strong>Why:</strong> Real stories from real students help more than generic info.</p>
@@ -148,7 +148,7 @@
 <li>Senior students host Q&amp;A webinars</li>
 <li>Anonymous landlord reviews</li>
 </ul>
-<a href="https://www.facebook.com/groups/UWAStudentsHousing" style="display:block; margin-top:10px; color:#005792; font-weight:bold;" target="_blank">🔗 Learn more</a></div>
+</div>
 </section>
 <section>
 <h2 class="section-title">📋 Rental Checklist</h2>
@@ -162,7 +162,6 @@
 <li>✅ Rules on room sharing or guests</li>
 </ul>
 <p>Always read before signing. Use this checklist to protect yourself.</p>
-
 </div>
 <button class="accordion">Click to View Full Checklist</button>
 <div class="panel">
