--- a/index.html
+++ b/index.html
@@ -152,29 +152,20 @@
 </section>
 <section>
 <h2 class="section-title">📋 Rental Checklist</h2>
-<button class="accordion">Click to View Rental Checklist</button>
+<button class="accordion">Click to View Full Rental Checklist</button>
 <div class="panel">
-<ul>
-<li>✅ Bond details and payment receipts</li>
-<li>✅ Duration of lease and renewal terms</li>
-<li>✅ Exit/break clause and notice period</li>
-<li>✅ Maintenance responsibilities clearly listed</li>
-<li>✅ Rules on room sharing or guests</li>
-</ul>
-<p>Always read before signing. Use this checklist to protect yourself.</p>
-</div>
-<button class="accordion">Click to View Full Checklist</button>
-<div class="panel">
+<p>This checklist is designed to help international students protect themselves before signing any rental agreement in Australia. It includes key legal, safety, and practical points to consider so you don't get caught in a rental scam or unfair situation.</p>
 <ul style="list-style-type: disc; padding-left: 20px;">
-<li>Confirm if the landlord is licensed or if it’s a private arrangement</li>
-<li>Ask for a written lease agreement—never rely on verbal promises</li>
-<li>Check what the bond covers and ensure it’s lodged with the Bond Administrator</li>
-<li>Take photos of the property condition before moving in</li>
-<li>Understand who handles repairs and how to report them</li>
-<li>Clarify any fees beyond rent and bond—e.g., utilities, internet, admin fees</li>
-<li>Know the notice period for moving out or breaking the lease</li>
-<li>Get receipts for every payment made</li>
+<li>🔍 Always inspect the property (or arrange a video call) before paying anything.</li>
+<li>📝 Make sure you receive a written lease agreement—verbal promises don’t protect you.</li>
+<li>💰 Understand your bond: it must be lodged with the Bond Administrator, not kept by the landlord.</li>
+<li>📷 Take photos of the condition of the property when moving in—for your own record.</li>
+<li>⚠️ Check who is responsible for utilities, repairs, and maintenance—and get that in writing.</li>
+<li>📄 Ask for receipts and written confirmation of any payment, especially if done in cash.</li>
+<li>📦 Read through the lease for unfair terms—e.g., excessive penalties, unusual restrictions.</li>
+<li>❗ If anything feels suspicious, consult your university’s housing service or Consumer Protection WA.</li>
 </ul>
+<p>Following this checklist can help you avoid legal trouble, protect your money, and make your rental experience smooth and secure.</p>
 </div>
 </section>
 <section style="background-image: url('https://images.unsplash.com/photo-1507537297725-24a1c029d3ca'); background-size: cover; background-position: center; padding: 60px 20px;">
@@ -262,7 +253,7 @@
 <div class="panel"><p>Contact Red Cross or UWA Student Assist. You may be able to break lease or move urgently.</p></div>
 <button class="accordion">Is room-sharing with 4 legal?</button>
 <div class="panel"><p>This may breach health and safety laws. Always check with the council or lease agreement.</p></div>
-</section>
+<button class="accordion">Can I break a lease early?</button><div class="panel"><p>Yes, but you may have to pay break lease fees unless you have a valid reason such as landlord breach or family emergency.</p></div><button class="accordion">Is it legal for a landlord to ask for cash only?</button><div class="panel"><p>Landlords must offer at least one payment method other than cash. Always ask for receipts.</p></div><button class="accordion">What should I do if repairs are not being done?</button><div class="panel"><p>Put your request in writing. If the landlord fails to act, contact Consumer Protection WA or a tenancy advisor.</p></div><button class="accordion">Can I have roommates if I’m the only one on the lease?</button><div class="panel"><p>You need the landlord’s written approval. Otherwise, you may be breaching the lease.</p></div><button class="accordion">What happens if I overpay my rent?</button><div class="panel"><p>Any overpayment must be returned to you. Always keep records and request a refund in writing.</p></div></section>
 <section>
 <h2 class="section-title">🛡️ Renting Myth Busters</h2>
 <button class="accordion">Click to View Common Misconceptions</button>
